Fixed alignment on about page

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,7 +1,7 @@
 .about-image {
     display: inline;
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     border-radius: 6%;
 }
 
